--- a/random_quote_front/src/styles/Lab.css
+++ b/random_quote_front/src/styles/Lab.css
@@ -1,17 +1,11 @@
-.formStyle {
-    display: flex;
-    flex-direction: column;
-    padding-top: 100px;
-    background-color: orange;
+.lab-header {
+    margin-top: 250px;
 }
 
-.labContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: yellow
+.form-style {
+    margin-top: 60px;
 }
 
-.formContainer {
-    background-color: black;
+.button-style {
+    margin-top: 20px;
 }
