finalizing changes to lab

--- a/random_quote_front/src/styles/Lab.css
+++ b/random_quote_front/src/styles/Lab.css
@@ -1,3 +1,7 @@
+
+.labContainer {
+}
+
 .lab-header {
     margin-top: 100px;
 }
@@ -6,6 +10,4 @@
     margin-top: 45px;
 }
 
-.button-style {
-    margin-top: 20px;
-}
+
