--- a/random_quote_front/src/styles/App.css
+++ b/random_quote_front/src/styles/App.css
@@ -4,8 +4,8 @@
   height: 100%;
   min-height:100vh;
   
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); 
+  /* text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);  */
 }
 
 
@@ -13,7 +13,7 @@
 .navStyles {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  /* color: rgba(255, 255, 255, .5);
   background-color: transparent;
-  border-bottom: .25rem solid transparent;
+  border-bottom: .25rem solid transparent; */
 }
